--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.5",
-    "koishi": "^2.4.3",
-    "koishi-adapter-cqhttp": "^1.0.8",
-    "koishi-core": "^2.4.2",
-    "koishi-plugin-common": "^3.0.3",
-    "koishi-plugin-monitor": "^1.0.0-beta.16",
-    "koishi-plugin-status": "^2.0.0",
-    "koishi-plugin-teach": "^1.2.2",
-    "koishi-plugin-tools": "^1.0.4"
+    "koishi-adapter-onebot": "^3.1.0",
+    "koishi-plugin-common": "^4.3.5",
+    "koishi-plugin-image-search": "3"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@types/node": "^14.14.14",
-    "koishi-plugin-rss": "^1.1.1",
-    "koishi-plugin-schedule": "^2.0.4",
-    "koishi-utils": "^3.2.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "eslint": "^8.7.0",
+    "jest": "^27.4.7",
+    "koishi": "3.14.2",
+    "koishi-adapter-onebot": "^3.1.0",
+    "koishi-plugin-common": "^4.3.5",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
   }
 }
