--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koishi-adapter-onebot": "^3.1.0",
     "koishi-plugin-common": "^4.3.5",
     "koishi-plugin-image-search": "3",
+    "openai": "^3.2.1",
     "twitter-api-sdk": "^1.0.3"
   },
   "devDependencies": {
